# python-project-49

./: .pyproject.toml.swn  .pyproject.toml.swo  .pyproject.toml.swp  Makefile  README.md  demo.cast  pyproject.toml  ruff.toml  video.cast  video2.cast  video3.cast  video4.cast  video5.cast  video6.cast
brain_games/: cli.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
